package  guitarHero;
public class Solo_PutGuitarOnFire implements SoloBehavior {

	public void solo() {
	System.out.println("Put guitar on fire");
	}

}
