@startuml

title __SRC's Class Diagram__\n

  namespace  {
    abstract class GameCharacter {
        + GameCharacter()
        + change()
        + playGuitar()
        + playSolo()
        + setGuitar()
        + setSolo()
    }
  }
  

  namespace  {
    class GameCharacterHendrix {
        + GameCharacterHendrix()
    }
  }
  

  namespace  {
    class GameCharacterSlash {
        + GameCharacterSlash()
        + change()
    }
  }
  

  namespace  {
    interface GuitarBehavior {
        {abstract} + play()
    }
  }
  

  namespace  {
    class Guitar_GibsonSG {
        + play()
    }
  }
  

  namespace  {
    class Guitar_Telecaster {
        + play()
    }
  }
  

  namespace  {
    interface SoloBehavior {
        {abstract} + solo()
    }
  }
  

  namespace  {
    class Solo_JumpOffStage {
        + solo()
    }
  }
  

  namespace  {
    class Solo_PutGuitarOnFire {
        + solo()
    }
  }
  

  namespace  {
    class TestGuitarHero {
        {static} + main()
    }
  }
  

  GameCharacter o-- GuitarBehavior : guitarBehavior
  GameCharacter o-- SoloBehavior : soloBehavior
  GameCharacterHendrix -up-|> GameCharacter
  GameCharacterSlash -up-|> GameCharacter
  Guitar_GibsonSG .up.|> GuitarBehavior
  Guitar_Telecaster .up.|> GuitarBehavior
  Solo_JumpOffStage .up.|> SoloBehavior
  Solo_PutGuitarOnFire .up.|> SoloBehavior


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
